# subscraper

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  subdomains.txt  subscraper.py
.github/: FUNDING.yml
subscraper/: __init__.py  __main__.py  cli.py  helpers.py  reporter.py  sub_handler.py  utils.py
subscraper/data/: config.json  subdomains.txt
subscraper/modules/: __init__.py  alienvault.py  archive_org.py  bevigil.py  bufferover.py  bufferoverrun.py  censys.py  censys_io.py  censysio.py  certspotter.py  chaos.py  crt_sh.py  crtsh.py  dns_brute.py  dns_bufferover_run.py  dns_dumpster.py  dnsrepo.py  example_module.py  redhuntlabs.py  shodan.py  threatcrowd.py  virustotal.py  wayback_machine.py  web_archive.py  web_scraper.py  web_search.py
subscraper/resources/: subdomains.txt
subscraper/support/: __init__.py  cli.py  sub_handler.py
